@@ -1201,6 +1201,7 @@ JPEGDecode(TIFF* tif, uint8* buf, tmsize_t cc, uint16 s)
 	/* data is expected to be read in multiples of a scanline */
 	if (nrows)
 	{
+#if JPEG_LIB_MK1_OR_12BIT /* BITS_IN_JSAMPLE 12 or 16 */
 		JSAMPROW line_work_buf = NULL;
 
 		/*
@@ -1215,8 +1216,10 @@ JPEGDecode(TIFF* tif, uint8* buf, tmsize_t cc, uint16 s)
 			    _TIFFmalloc(sizeof(short) * sp->cinfo.d.output_width
 			    * sp->cinfo.d.num_components );
 		}
+#endif /* JPEG_LIB_MK1_OR_12BIT */
 
 		do {
+#if JPEG_LIB_MK1_OR_12BIT /* BITS_IN_JSAMPLE 12 or 16 */
 			if( line_work_buf != NULL )
 			{
 				/*
@@ -1258,7 +1261,9 @@ JPEGDecode(TIFF* tif, uint8* buf, tmsize_t cc, uint16 s)
 					}
 				}
 			}
-			else
+			/* else */
+#endif /* JPEG_LIB_MK1_OR_12BIT */
+#if !JPEG_LIB_MK1_OR_12BIT
 			{
 				/*
 				 * In the libjpeg6b 8bit case.  We read directly into the
@@ -1269,14 +1274,17 @@ JPEGDecode(TIFF* tif, uint8* buf, tmsize_t cc, uint16 s)
 				if (TIFFjpeg_read_scanlines(sp, &bufptr, 1) != 1)
 					return (0);
 			}
+#endif /* !JPEG_LIB_MK1_OR_12BIT */
 
 			++tif->tif_row;
 			buf += sp->bytesperline;
 			cc -= sp->bytesperline;
 		} while (--nrows > 0);
 
+#if JPEG_LIB_MK1_OR_12BIT /* BITS_IN_JSAMPLE 12 or 16 */
 		if( line_work_buf != NULL )
 			_TIFFfree( line_work_buf );
+#endif /* JPEG_LIB_MK1_OR_12BIT */
 	}
 
         /* Update information on consumed data */
